Updated Sonar and Code coverages